feat(redis): optimize pixel loading using multiGet instead of per-key get